[gd_scene load_steps=15 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://player/player-1.tscn" type="PackedScene" id=2]
[ext_resource path="res://long_chanins.png" type="Texture" id=3]
[ext_resource path="res://player/player_2.tscn" type="PackedScene" id=4]
[ext_resource path="res://Assets/BGM.jpg" type="Texture" id=5]
[ext_resource path="res://player/Area2D.gd" type="Script" id=6]
[ext_resource path="res://player/pathfinding.gd" type="Script" id=7]
[ext_resource path="res://Enemy/enemy.tscn" type="PackedScene" id=8]

[sub_resource type="NavigationPolygon" id=4]
vertices = PoolVector2Array( 0, 0, 64, 0, 64, 64, 0, 64 )
polygons = [ PoolIntArray( 0, 1, 2, 3 ) ]

[sub_resource type="ConvexPolygonShape2D" id=1]
points = PoolVector2Array( 0, 0, 64, 0, 64, 64, 0, 64 )

[sub_resource type="TileSet" id=2]
0/name = "icon.png 0"
0/texture = ExtResource( 1 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 64, 64 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/navigation = SubResource( 4 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape = SubResource( 1 )
0/shape_one_way = false
0/shape_one_way_margin = 1.0
0/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 1 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
0/z_index = 0
1/name = "long_chanins.png 1"
1/texture = ExtResource( 3 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 0, 32, 96, 32 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape_one_way = false
1/shape_one_way_margin = 0.0
1/shapes = [  ]
1/z_index = 0

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 185.294, 71.3905 )

[sub_resource type="NavigationPolygon" id=5]
vertices = PoolVector2Array( 1024.18, 61.1432, 739.384, 7.69062, 962.607, -1.51248, 1154.77, -1.51248, 1218, 62.0807, 1155.65, -65.8268, 1827.06, -607.827, 1879.07, 252.897, -219.22, 59.6174, -177.197, -68.155, -168.711, 114.279, -223.94, 137.015, 129.754, -63.9252, 130.748, -135.178, 251.278, -272.709, 249.896, 8.21252, 176.357, -0.272751, 179.185, 80.3374, 1023.18, 126.771, 771.85, 118.426, -89.5153, 13.8694, -61.0884, -60.1751, -105.072, -73.8119, -67.0522, -118.302, -278.626, -121.835, 1215.02, 128.646, 782.477, 252.067, 704.55, 120.097, 266.006, 119.907, 180.848, 118.726, 2.5256, -135.178, 4.51355, -195.18, 1024.59, -65.8268, 1026.36, -191.114, 956.408, -120.118, 828.892, -125.965, 730.682, -282.548, 826.236, -194.455, 693.924, 252.897, 267.258, 260.472, 174.586, 252.897, -551.464, 61.5051, -280.117, -196.369, -924.716, -500.794, -825.425, 252.897, -553.352, 134.183 )
polygons = [ PoolIntArray( 0, 1, 2, 3, 4 ), PoolIntArray( 5, 6, 7, 4, 3 ), PoolIntArray( 8, 9, 10, 11 ), PoolIntArray( 12, 13, 14, 15, 16 ), PoolIntArray( 17, 15, 1, 0, 18, 19 ), PoolIntArray( 15, 17, 16 ), PoolIntArray( 12, 16, 20, 21 ), PoolIntArray( 21, 20, 22, 23 ), PoolIntArray( 24, 23, 22, 9 ), PoolIntArray( 25, 4, 7 ), PoolIntArray( 25, 7, 26, 18 ), PoolIntArray( 18, 26, 19 ), PoolIntArray( 17, 19, 27, 28, 29 ), PoolIntArray( 13, 30, 31, 14 ), PoolIntArray( 5, 32, 33, 6 ), PoolIntArray( 34, 2, 1, 35 ), PoolIntArray( 35, 1, 36, 37 ), PoolIntArray( 38, 39, 28, 27 ), PoolIntArray( 10, 17, 29, 40, 11 ), PoolIntArray( 24, 9, 8, 41 ), PoolIntArray( 42, 24, 41, 43 ), PoolIntArray( 11, 40, 44, 45 ), PoolIntArray( 45, 44, 43, 41 ), PoolIntArray( 42, 43, 6, 14 ), PoolIntArray( 33, 37, 36, 6 ), PoolIntArray( 14, 31, 42 ), PoolIntArray( 14, 6, 36 ) ]
outlines = [ PoolVector2Array( 1879.07, 252.897, 1827.06, -607.827, -924.716, -500.794, -825.425, 252.897, 174.586, 252.897, 180.848, 118.726, 266.006, 119.907, 267.258, 260.472, 693.924, 252.897, 704.55, 120.097, 771.85, 118.426, 782.477, 252.067 ), PoolVector2Array( -553.352, 134.183, -551.464, 61.5051, -219.22, 59.6174, -223.94, 137.015 ), PoolVector2Array( 129.754, -63.9252, -61.0884, -60.1751, -67.0522, -118.302, -278.626, -121.835, -280.117, -196.369, 4.51355, -195.18, 2.5256, -135.178, 130.748, -135.178 ), PoolVector2Array( 1215.02, 128.646, 1023.18, 126.771, 1024.18, 61.1432, 1218, 62.0807 ), PoolVector2Array( 828.892, -125.965, 826.236, -194.455, 1026.36, -191.114, 1024.59, -65.8268, 1155.65, -65.8268, 1154.77, -1.51248, 962.607, -1.51248, 956.408, -120.118 ), PoolVector2Array( 739.384, 7.69062, 730.682, -282.548, 251.278, -272.709, 249.896, 8.21252 ), PoolVector2Array( 176.357, -0.272751, 179.185, 80.3374, -168.711, 114.279, -177.197, -68.155, -105.072, -73.8119, -89.5153, 13.8694 ) ]

[sub_resource type="Environment" id=6]
background_mode = 4
glow_enabled = true
glow_levels/1 = true
glow_intensity = 4.0
glow_strength = 1.38
glow_blend_mode = 0
glow_hdr_threshold = 0.9

[node name="temp_level" type="Node2D"]
modulate = Color( 0.807843, 0.807843, 0.807843, 1 )

[node name="Control" type="Control" parent="."]
margin_left = -595.0
margin_top = -301.0
margin_right = 1585.0
margin_bottom = 915.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_scale = Vector2( 1.08421, 1.08521 )
texture = ExtResource( 5 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TileMap" type="TileMap" parent="."]
tile_set = SubResource( 2 )
format = 1
tile_data = PoolIntArray( -131076, 0, 0, -131075, 0, 0, -131074, 0, 0, -131073, 0, 0, -196595, 0, 0, -196594, 0, 0, -196593, 0, 0, -65537, 0, 0, -131072, 0, 0, -131071, 0, 0, -131057, 0, 0, -65521, 0, 0, -65520, 0, 0, -65519, 0, 0, 131064, 0, 0, 131065, 0, 0, 131066, 0, 0, 131067, 0, 0, 65552, 0, 0, 65553, 0, 0, 65554, 0, 0, 131075, 0, 0, 131083, 0, 0, 196611, 0, 0, 196619, 0, 0, 327669, 0, 0, 327670, 0, 0, 327671, 0, 0, 327672, 0, 0, 327673, 0, 0, 327674, 0, 0, 327675, 0, 0, 327676, 0, 0, 327677, 0, 0, 327678, 0, 0, 327679, 0, 0, 262144, 0, 0, 262145, 0, 0, 262146, 0, 0, 262147, 0, 0, 262148, 0, 0, 262149, 0, 0, 262150, 0, 0, 262152, -1610612735, 0, 262153, 0, 0, 262154, 0, 0, 262155, 0, 0, 262156, 0, 0, 262157, 0, 0, 262158, -1610612736, 0, 262159, -1610612736, 0, 262160, -1610612736, 0, 262161, -1610612736, 0, 262162, -1610612736, 0, 262163, -1610612736, 0, 262164, -1610612736, 0, 262165, -1610612736, 0, 262166, -1610612736, 0, 262167, -1610612736, 0, 262168, -1610612736, 0, 262169, -1610612736, 0, 262170, -1610612736, 0, 262171, -1610612736, 0, 327688, -1610612735, 0, 393224, -1610612735, 0, 458760, -1610612735, 0, 524296, -1610612735, 0, 589832, -1610612735, 0, 655368, -1610612735, 0, 720904, -1610612735, 0, 786440, -1610612735, 0 )

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 512.044, 300 )
current = true
zoom = Vector2( 2, 2 )

[node name="Area2D" type="Area2D" parent="."]
position = Vector2( 511.216, 178.787 )
script = ExtResource( 6 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 3 )

[node name="Navigation2D" type="Navigation2D" parent="."]
script = ExtResource( 7 )

[node name="NavigationPolygonInstance" type="NavigationPolygonInstance" parent="Navigation2D"]
visible = false
navpoly = SubResource( 5 )

[node name="Line2D" type="Line2D" parent="Navigation2D"]

[node name="player-1" parent="Navigation2D" instance=ExtResource( 2 )]
modulate = Color( 0.0313726, 1, 0, 1 )

[node name="player_2" parent="Navigation2D" groups=[
"player",
] instance=ExtResource( 4 )]
position = Vector2( 526.308, 666.001 )

[node name="enemy" parent="Navigation2D" instance=ExtResource( 8 )]
position = Vector2( 124.294, 85.8626 )

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 6 )

[connection signal="body_entered" from="Area2D" to="Area2D" method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="Area2D" method="_on_Area2D_body_exited"]
